# cpphello

./: CMakeLists.txt  hello.cpp
math/: CMakeLists.txt
math/include/: div.h  sub.h
math/lib/: libmath.1.2.dylib  libmath.1.dylib  libmath.dylib
math/src/: add.cpp  div.cpp  sub.cpp
